--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE HTML>
-<body>
-<p>Hello</p>
-</body>
+<html lang="zh-CN">
+    <head>
+        <meta charset="utf-8" />
+        <title>我的测试站点</title>
+    </head>
+    <body>
+        <p>This is my page.</p>
+    </body>
+</html>
