--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>我的测试站点</title>
     </head>
     <body>
-        <p>This is my page.</p>
+        <p>I Love You 💗&#127801</p>
+        <img src="https://img.ixintu.com/download/jpg/202010/ad9fe221cf99c54b8e83000feb86bdc9_610_610.jpg!con"
+        alt="爱心">
     </body>
-</html>
+</html>	
