--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
     <head>
         <meta charset="utf-8" />
-        <title>我的测试站点</title>
+        <title>洞洞的网站</title>
     </head>
     <body>
         <p>I Love You 💗&#127801</p>
