--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <title>Johnpink的个人博客</title>
     </head>
     <body>
-        <p>I Love You 💗&#127801</p>
-        <img src="https://img.ixintu.com/download/jpg/202010/ad9fe221cf99c54b8e83000feb86bdc9_610_610.jpg!con"
-        alt="爱心">
+        <h1>
+            😃Hello, this is JohnPink's Blog.
+        </h1>
+            <a>My page is still buliding.</a>
+            <p>My plan is to build a static page firstly.</p>
     </body>
 </html>	
