--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Johnpink的个人博客</title>
-        <link rel="shortcut icon" href="/src/John.jpg">
+        <link rel="shortcut icon" href="John.ico" type="image/x-icon">
     </head>
     <body>
         <h1>
