--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         </h1>
             <a>My page is still buliding.</a>
             <p>My plan is to build a static page firstly.</p>
+            <p>Welcome to subcribe me on github</p>
+            <a href="https://github.com/johnpink11">My github</a>
     </body>
 </html>	
