--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <p>My plan is to build a static page firstly.</p>
             <p>Welcome to subcribe me on github</p>
             <a href="https://github.com/johnpink11">My github</a>
-            <a href="happybirthday.html">Surprise for Margie </a>
+            <div>
+                <a href="happybirthday.html">Surprise for Margie </a>
+            </div>
     </body>
 </html>	
