--- a/happybirthday.html
+++ b/happybirthday.html
@@ -2,7 +2,8 @@
 <html lang="en" >
 <head>
 <meta charset="UTF-8">
-<title>Happy Birthday!</title>
+<title>Happy Birthday, Margie!</title>
+<link rel="shortcut icon" href=🎂 type="image/x-icon" />
 <style>
 	@import url("https://fonts.googleapis.com/css?family=Concert+One|Pacifico");
 .mobile {
