--- a/happybirthday.html
+++ b/happybirthday.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Happy Birthday, Margie!</title>
-<link rel="shortcut icon" href=🎂 type="image/x-icon" />
+<link rel="shortcut icon" href="image/cake.ico" type="image/x-icon" />
+
 <style>
 	@import url("https://fonts.googleapis.com/css?family=Concert+One|Pacifico");
 .mobile {
