Love song for Margie

--- a/happybirthday.html
+++ b/happybirthday.html
@@ -1040,6 +1040,7 @@ h1, h2, span {
 <div class="after"></div>
 </div>
 <h1>I love You</h1>
+<audio src="/Resources/Alittlesweet.mp3" autoplay loop></audio>
 <h2>Happy Birthday my dear Margie!</h2>
 <span>🎉</span>
 <div class="candle">
