update for cake

--- a/happybirthday.html
+++ b/happybirthday.html
@@ -1040,7 +1040,7 @@ h1, h2, span {
 <div class="after"></div>
 </div>
 <h1>I love You</h1>
-<audio id="backgroundAudio" src="/Resources/Alittlesweet.mp3"  loop ></audio>
+<audio id="backgroundAudio" src="https://ra-sycdn.kuwo.cn/8425ce611e8cab5533305d7be17e5f8b/65b642bc/resource/n1/34/17/875007460.mp3"  loop ></audio>
 
 <script>
 document.addEventListener("scroll", function() {
