--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
             <div>
                 <a href="happybirthday.html">Surprise for Margie </a>
             </div>
+
+            <div>
+                <a href="Notes/notes.html"> My notes </a>
+            </div>
     </body>
 </html>	
