--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -10,8 +10,8 @@
             These are some articles about what I have learned. Hope they are userful for you.
         </h1>
         <ul>
-            <li href="Notes/Git 使用手册">
-                Git使用手册
+            <li>
+                <a href="Notes/Git 使用手册">Git使用手册</a>
             </li>
         </ul>
     </body>
