--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -11,7 +11,7 @@
         </h1>
         <ul>
             <li>
-                <a href="Notes/Git 使用手册">Git使用手册</a>
+                <a href="happybirthday.html">Git使用手册</a>
             </li>
         </ul>
     </body>
