changed url of notes.html

--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -11,7 +11,7 @@
         </h1>
         <ul>
             <li>
-                <a href="happybirthday.html">Git使用手册</a>
+                <a href="https://johnpink11.github.io/johnpink.github.io/Notes/Git%20%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C">Git使用手册</a>
             </li>
         </ul>
     </body>
