changed url of notes.html

--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -11,7 +11,7 @@
         </h1>
         <ul>
             <li>
-                <a href="/Notes/How_to_use_Git">Git使用手册</a>
+                <a href="/johnpink.github.io//Notes/How_to_use_Git">Git使用手册</a>
             </li>
         </ul>
     </body>
