--- a/sample.html
+++ b/sample.html
@@ -52,7 +52,7 @@
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>Hello</h1>
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
