--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -53,12 +53,12 @@
         .container {
           margin: 10px auto;
           max-width: 600px;
-          text-align: center;
+          text-align:left; 
         }
 
         h1 {
           margin: 30px 0;
-          font-size: 4em;
+          font-size: 2em;
           line-height: 1;
           letter-spacing: -1px;
         }
