add HTML.md and mix some bugs

--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -42,8 +42,8 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/johnpink.github.io/Hello/">Hello</a><a class="page-link"
-            href="/johnpink.github.io/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/johnpink.github.io/About%20me/">About me</a><a
+          class="page-link" href="/johnpink.github.io/about/">About</a></div>
       </nav>
     </div>
   </header>
@@ -72,6 +72,9 @@
         <ul>
           <li>
             <a href="/johnpink.github.io//Notes/How_to_use_Git">Git使用手册</a>
+          </li>
+          <li>
+            <a href="/johnpink.github.io//Notes/HTML">HTML 笔记</a>
           </li>
         </ul>
 
