--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/johnpink.github.io/Hello/">Hello</a><a class="page-link"
-            href="/johnpink.github.io/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/johnpink.github.io/About%20me/">About me</a><a
+            class="page-link" href="/johnpink.github.io/about/">About</a></div>
       </nav>
     </div>
   </header>
