changed HTML.md name to HTMLnote.md

--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -74,7 +74,7 @@
             <a href="/johnpink.github.io//Notes/How_to_use_Git">Git使用手册</a>
           </li>
           <li>
-            <a href="/johnpink.github.io//Notes/HTML">HTML 笔记</a>
+            <a href="/johnpink.github.io//Notes/HTMLnote">HTML 笔记</a>
           </li>
         </ul>
 
