--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -71,7 +71,7 @@
         </h1>
         <ul>
           <li>
-            <a href="/.../Notes/How_to_use_Git">Git使用手册</a>
+            <a href="/...//Notes/How_to_use_Git">Git使用手册</a>
           </li>
           <li>
             <a href="/...//Notes/HTMLnote">HTML 笔记</a>
