add decription for index.HTML

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta property="og:title" content="JohnPink’s Blog" />
   <meta property="og:locale" content="en_US" />
   <meta name="description"
-    content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
+    content="JohnPink's Blog. This is my own blog, you can learn about me through this website. And there are some learning notes on it."/>
   <meta property="og:description"
-    content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
+    content="JohnPink's Blog" />
   <link rel="canonical" href="https://johnpink11.github.io/johnpink.github.io//johnpink.github.io/404.html" />
   <meta property="og:url" content="https://johnpink11.github.io/johnpink.github.io//johnpink.github.io/404.html" />
   <meta property="og:site_name" content="JohnPink’s Blog" />
