--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -11,10 +11,14 @@
   <meta property="og:locale" content="en_US" />
   <meta name="description"
     content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
+  <meta 
+        property="og:image"
+        content="https://developer.mozilla.org/mdn-social-share.png" />
   <meta property="og:description"
     content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
   <link rel="canonical" href="https://johnpink11.github.io/johnpink.github.io//johnpink.github.io/404.html" />
   <meta property="og:url" content="https://johnpink11.github.io/johnpink.github.io//johnpink.github.io/404.html" />
+  <meta property="og:title" content="John's Notes"/>
   <meta property="og:site_name" content="JohnPink’s Blog" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary" />
