--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="zh-CN">
 
 <head>
+
+  <!--Set icon for site-->
+  <link ref="icon" href="favicon.ico" type="image/x-icon" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.8.0 -->
