--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -80,6 +80,9 @@
           <li>
             <a href="/johnpink.github.io/Notes/HTMLnote">HTML 笔记</a>
           </li>
+          <li>
+            <a href="/johnpink.github.io/Notes/test.html">TEST page</a>
+          </li>
         </ul>
 
 
