--- a/Notes/test.html
+++ b/Notes/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <link ref="icon" href="../favicon.ico" type="x-icon"/>
+        <link rel="icon" href="../favicon.ico" type="x-icon"/>
         <meta charset="utf-8" />
         <title>Test page </title>
     </head>
