correct a spelling mistake

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1>
           😃Hello, this is JohnPink's Blog.
         </h1>
-        <a>My page is still buliding.</a>
+        <a>My page is still building.</a>
         <p>My plan is to build a static page firstly.</p>
         <p>Welcome to subcribe me on github</p>
         <a href="https://github.com/johnpink11">My github</a>
