--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -83,6 +83,9 @@
           <li>
             <a href="/johnpink.github.io/Notes/test.html">TEST page</a>
           </li>
+          <li>
+            <a href="/johnpink.github.io/Notes/HTMLnote">数据库</a>
+          </li>
         </ul>
 
 
