--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
         <p>My plan is to build a static page firstly.</p>
         <p>Welcome to subcribe me on github</p>
         <a href="https://github.com/johnpink11">My github</a>
-        <div>
-          <a href="Notes/notes.html"> My notes </a>
-        </div>
+        <a href="Notes/notes.html"> My notes </a>
+        <a href="">第四学期不完全指南</a>
 
       </div>
 
