--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <meta property="og:title" content="JohnPink’s Blog" />
   <meta property="og:locale" content="en_US" />
   <meta name="description"
-    content="JohnPink's Blog. This is my own blog, you can learn about me through this website. And there are some learning notes on it."/>
-  <meta property="og:description"
-    content="JohnPink's Blog" />
+    content="JohnPink's Blog. This is my own blog, you can learn about me through this website. And there are some learning notes on it." />
+  <meta property="og:description" content="JohnPink's Blog" />
   <link rel="canonical" href="https://johnpink11.github.io/johnpink.github.io//johnpink.github.io/404.html" />
   <meta property="og:url" content="https://johnpink11.github.io/johnpink.github.io//johnpink.github.io/404.html" />
   <meta property="og:site_name" content="JohnPink’s Blog" />
@@ -75,9 +74,10 @@
         <a>My page is still building.</a>
         <p>My plan is to build a static page firstly.</p>
         <p>Welcome to subcribe me on github</p>
-        <a href="https://github.com/johnpink11">My github</a>
-        <a href="Notes/notes.html"> My notes </a>
+        <p><a href="https://github.com/johnpink11">My github</a></p>
+        <p><a href="Notes/notes.html"> My notes </a></p>
         <a href="">第四学期不完全指南</a>
+        <p></p>
 
       </div>
 
