changed href of database

--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -84,7 +84,7 @@
             <a href="/johnpink.github.io/Notes/test.html">TEST page</a>
           </li>
           <li>
-            <a href="/johnpink.github.io/Notes/HTMLnote">数据库</a>
+            <a href="/johnpink.github.io/Notes/database">数据库</a>
           </li>
         </ul>
 
