corrected a spelling error

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </h1>
         <a>My page is still building.</a>
         <p>My plan is to build a static page firstly.</p>
-        <p>Welcome to subcribe me on github</p>
+        <p>Welcome to subscribe to me on github</p>
         <p><a href="https://github.com/johnpink11">My github</a></p>
         <p><a href="Notes/notes.html"> My notes </a></p>
         <a href="">第四学期不完全指南</a>
