--- a/resume.html
+++ b/resume.html
@@ -38,51 +38,48 @@
 <body>
     <div class="section">
         <h1>个人简历</h1>
-        <p>姓名：张三</p>
-        <p>职位：软件工程师</p>
-        <p>邮箱：<a href="mailto:zhangsan@example.com">zhangsan@example.com</a></p>
-        <p>电话：123-4567-8901</p>
+        <p>姓名：籍学章</p>
+        <p>邮箱：<a href="mailto:jixuezhanggg@gmail.com">jixuezhanggg@gmail.com</a></p>
+        <p>电话：+86 15989097785</p>
     </div>
 
     <div class="section">
         <h2>教育背景</h2>
-        <ul>
-            <li>北京大学，计算机科学与技术，2018-2022</li>
-            <li>高中，某某高级中学，2015-2018</li>
-        </ul>
+        <p>
+            当前就读于华南理工大学数学学院强基计划班，同时正在辅修和自学计算机的相关知识。
+        </p>
     </div>
 
     <div class="section">
-        <h2>工作经历</h2>
+        <h2>成绩</h2>
         <ul>
-            <li>某科技有限公司，软件工程师，2022年至今</li>
-            <li>某实习公司，软件开发实习生，2021年</li>
+            <li>当前班级排名第2。</li>
+            <li>获2023-2024国家奖学金。</li>
+            <li>数学建模亚太杯曾获二等奖。</li>
         </ul>
     </div>
 
     <div class="section">
         <h2>技能</h2>
         <ul>
-            <li>熟练掌握Java, Python等编程语言</li>
-            <li>熟悉前端技术，如HTML, CSS, JavaScript</li>
-            <li>了解数据库技术，如MySQL, Redis</li>
+            <li>熟练掌握C++, Python等编程语言</li>
+            <li>了解前端技术, 如HTML, CSS, JavaScript</li>
         </ul>
     </div>
 
     <div class="section">
         <h2>项目经验</h2>
         <ul>
-            <li>某电商平台后端开发，负责商品模块的实现与维护</li>
-            <li>某企业内部管理系统开发，使用Python和Django框架实现</li>
+            <li>拼图小游戏，利用WPF和C#开发。</li>
+            <li>一个简单的智慧教室管理系统，利用C++开发。</li>
         </ul>
     </div>
 
     <div class="section">
         <h2>个人爱好</h2>
         <ul>
-            <li>阅读</li>
-            <li>旅行</li>
-            <li>编程</li>
+            <li>阅读: 了解不一样的人生百态。</li>
+            <li>编程: 对新奇事物比较感兴趣, 喜欢实现一些"酷"的东西。</li>
         </ul>
     </div>
 </body>
