--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -86,6 +86,9 @@
           <li>
             <a href="/johnpink.github.io/Notes/database">数据库</a>
           </li>
+          <li>
+            <a href="/johnpink.github.io/Resources/PrimerMath.pdf">初中数学简明教程</a>
+          </li>
         </ul>
 
 
