change of index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 {"@context":"https://schema.org","@type":"WebPage","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"JohnPink’s Blog","url":"https://johnpink11.github.io/johnpink.github.io//johnpink.github.io/404.html"}</script>
   <!-- End Jekyll SEO tag -->
   <link rel="stylesheet" href="/johnpink.github.io/assets/main.css">
+  <link rel="stylesheet" href="Styles/style.css">
   <link type="application/atom+xml" rel="alternate"
     href="https://johnpink11.github.io/johnpink.github.io//johnpink.github.io/feed.xml" title="JohnPink's Blog" />
 </head>
@@ -71,9 +72,11 @@
         <h1>
           😃Hello, this is JohnPink's Blog.
         </h1>
-        <a>My page is still building.</a>
+        <div id="introPara">
+        My page is still building.
         <p>My plan is to build a static page firstly.</p>
         <p>Welcome to subscribe to me on github</p>
+        </div>
         <p><a href="https://github.com/johnpink11">My github</a></p>
         <p><a href="Notes/notes.html"> My notes </a></p>
         <a href="">第四学期不完全指南</a>
