add some JS examples

--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -81,7 +81,7 @@
             <a href="/johnpink.github.io/Notes/HTMLnote">HTML 笔记</a>
           </li>
           <li>
-            <a href="/johnpink.github.io/learnweb/Bounce-balls-examples/index.html">弹跳小球---- 一个Javascript的例子</a>
+            <a href="/johnpink.github.io/learnweb/index.html">一些JavaScript的例子</a>
           </li>
           <li>
             <a href="/johnpink.github.io/Notes/database">数据库</a>
