--- a/learnweb/index.html
+++ b/learnweb/index.html
@@ -9,10 +9,10 @@
   <h1>Java Script例子</h1>
   <ul>
     <li>
-      <a href="learnweb/Bounce-balls-examples/index.html">弹跳小球</a>
+      <a href="Bounce-balls-examples/index.html">弹跳小球</a>
     </li>
     <li>
-      <a href="learnweb/rolling-Alice/index.html">旋转的爱丽丝(异步练习)</a>
+      <a href="rolling-Alice/index.html">旋转的爱丽丝(异步练习)</a>
     </li>
   </ul>
 </body>
