--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -89,6 +89,11 @@
           <li>
             <a href="/johnpink.github.io/Resources/PrimerMath.pdf">初中数学简明教程</a>
           </li>
+          <li>
+            <a href="https://john-st-note.streamlit.app/">
+            Streamlit Note
+            </a>
+          </li>
         </ul>
 
 
