--- a/Fourth_term/index.html
+++ b/Fourth_term/index.html
@@ -35,7 +35,7 @@ footer a:hover {
     <p>Hi, 👋这里放了一些我在学习过程中整理的一些笔记, 个人整理的难免有疏漏之处, 如有错误之处, 可以邮箱联系我改正, 我将不胜感激🙇🏻. </p>
     <ul>
         <li>
-            <a href="./ComplexFunction.pdf">复变函数</a>(仍在复习中)
+            <a href="./ComplexFunction.pdf">复变函数</a>(已完结)
         </li>
         <li>
             <a href="./Statiistic.pdf">统计学</a>(已完结, 后续会添加自学内容)
@@ -44,7 +44,7 @@ footer a:hover {
             <a href="./database.pdf">数据库系统</a>
         </li>
         <li>
-            <a href="./Differentialgeom.pdf">微分几何</a>(仍在复习中)
+            <a href="./Differentialgeom.pdf">微分几何</a>(已完结)
         </li>
     </ul>
     <p>如果需要LaTeX源码, 欢迎邮箱📮联系我</p>
